<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <!--   <ImageView
               style="@style/imageview_background"
                />-->

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">


            <LinearLayout
                android:id="@+id/middleLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rr"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/image_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/ic_arrow_back" />

                    <TextView
                        android:id="@+id/text_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/login"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp">

                   <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:src="@drawable/ic_launcher_background" />

                    <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="right"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/create_account" />

                    <EditText
                        android:id="@+id/et_email"
                        style="@style/edittext_style_black"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/email_address_mobile"
                        android:inputType="text"
                        android:maxLength="50" />


                    <EditText
                        android:id="@+id/et_password"
                        style="@style/edittext_style_black"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="25"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/button_green_20dp_corner_radius"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:text="@string/get_started" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</layout>
